fix(graalvm): run tests on non-optimizing truffle
Signed-off-by: Sam Gammon <sam@elide.dev>